common: wrap grab_button with gdk_error_trap_push/pop

The XIGrabButton and XIUngrabButton functions can fail with e.g. BadDevice,
so we should be careful to catch the error and not crash.

https://bugzilla.gnome.org/show_bug.cgi?id=760288